# easystemd

./: .gitignore  .opencodeignore  LICENSE  ProjectDescription.md  README.md  TODO.md  pyproject.toml
src/easystemd/: __init__.py  cli.py  config.py  doctor.py  models.py  state.py  systemd.py  templates.py  upgrade_runner.py
src/easystemd/templates/: serve.service.j2  upgrade.service.j2  upgrade.timer.j2
tests/: conftest.py  test_cli.py  test_config.py  test_doctor.py  test_systemd.py  test_upgrade_runner.py
