[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easystemd"
version = "0.1.0"
description = "Automate systemd --user 'serve + scheduled upgrade' pattern for standalone binaries"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "easystemd" }]
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
easystemd = "easystemd.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
easystemd = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that invoke a real systemd --user (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
